Fix UI on little screens (form for anonymous users was too high).

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -79,10 +79,16 @@
   }
 }
 
+/* Note: livechat-viewer-mode-content (the form where anonymous users can
+    choose nickname or log in with external account), can be something like
+    ~180px height (at time of writing).
+    We must ensure that the 200px limit for converse-muc and converse-root is
+    always higher than livechat-viewer-mode-content max size.
+*/
 #peertube-plugin-livechat-container converse-root {
   display: block;
   border: 1px solid black;
-  min-height: max(30vh, 200px);
+  min-height: max(30vh, 200px); // Always at least 200px, and ideally at least 30% of viewport.
   height: 100%;
 
   converse-muc {
